--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,9 +104,9 @@ CurrentRotGridSize=0
 CurrentPosGridSize=4
 
 [MRU]
-MRUItem0=/Game/Levels/Demo
-MRUItem1=/Game/Levels/texturedzoo
-MRUItem2=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/Levels/Demo
+MRUItem2=/Game/Levels/texturedzoo
 MRUItem3=/Game/Levels/MechanicsLevel
 MRUItem4=/Game/Levels/MainMenu
 MRUItem5=/Game/Chloe/UI/Main_Menu_level/Main_Menu
@@ -178,7 +178,7 @@ AIbot_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCatego
 K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 ObjectProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
-FloatProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+FloatProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 Perception_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 BoolProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
@@ -189,7 +189,7 @@ BaseWeapon_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueC
 UserDefinedStruct=
 BoxComponent=BoxComponent.Collision.Collision,
 TargetDummy_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-NameProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+NameProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 SpawnPoint_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 AttackPlayer_C=
 Door_C=
@@ -209,7 +209,7 @@ HUD_Proto_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCa
 PlayerControl_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 CoolDownComponent_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 RangedAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
-BaseAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+BaseAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 BaseArmour_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 BaseAccessory_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 Calc Offence Stats=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
@@ -229,6 +229,8 @@ CharacterMovementComponent=TopDownCharacter_C.Collision.Collision,StructProperty
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
+CorruptedSlave_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
+SetUpStats=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -252,14 +254,17 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/EnemyAgent
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
+OpenAssetsAtExit=/Game/EnemyAgent/CorruptedSlave.CorruptedSlave
+OpenAssetsAtExit=/Game/EnemyAgent/EnemyData.EnemyData
+OpenAssetsAtExit=/Game/EnemyAgent/EnemyStats.EnemyStats
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2622,6 +2627,47 @@ TopDownCharacter_C.HLOD=True
 TopDownCharacter_C.AssetUserData=True
 TopDownCharacter_C.Mobile=True
 TopDownCharacter_C.SkeletalMesh=True
+CorruptedSlave_C.Default=True
+CorruptedSlave_C.Tick=True
+CorruptedSlave_C.Character=True
+CorruptedSlave_C.Camera=True
+CorruptedSlave_C.Pawn=True
+CorruptedSlave_C.Rendering=True
+CorruptedSlave_C.Replication=True
+CorruptedSlave_C.Input=True
+CorruptedSlave_C.Actor=True
+EnemyStats.None=True
+CorruptedSlave_C.TransformCommon=True
+CorruptedSlave_C.Animation=True
+CorruptedSlave_C.Mesh=True
+CorruptedSlave_C.Physics=True
+CorruptedSlave_C.Clothing=True
+CorruptedSlave_C.Collision=True
+CorruptedSlave_C.Lighting=True
+CorruptedSlave_C.ClothingSimulation=True
+CorruptedSlave_C.Tags=True
+CorruptedSlave_C.Activation=True
+CorruptedSlave_C.Cooking=True
+CorruptedSlave_C.Character Movement: Jumping / Falling=True
+CorruptedSlave_C.Character Movement (General Settings)=True
+CorruptedSlave_C.Character Movement: Walking=True
+CorruptedSlave_C.Character Movement: Swimming=True
+CorruptedSlave_C.Character Movement: Flying=True
+CorruptedSlave_C.Character Movement: Custom Movement=True
+CorruptedSlave_C.Character Movement (Rotation Settings)=True
+CorruptedSlave_C.Character Movement: Physics Interaction=True
+CorruptedSlave_C.Character Movement (Networking)=True
+CorruptedSlave_C.Character Movement=True
+CorruptedSlave_C.Character Movement: Avoidance=True
+CorruptedSlave_C.Character Movement: NavMesh Movement=True
+CorruptedSlave_C.RootMotion=True
+CorruptedSlave_C.NavMovement=True
+CorruptedSlave_C.Velocity=True
+CorruptedSlave_C.PlanarMovement=True
+CorruptedSlave_C.MovementComponent=True
+CorruptedSlave_C.Shape=True
+CorruptedSlave_C.Navigation=True
+CorruptedSlave_C.Materials=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -2709,6 +2755,7 @@ TopDownCharacter_C.SkeletalMesh=True
 /Game/c024816h/PickUpInterface.PickUpInterface=0
 /Game/c024816h/TopDownCharacter3.TopDownCharacter3=0
 /Game/Mannequin/Character/Materials/TempCharacterInst.TempCharacterInst=0
+/Game/EnemyAgent/EnemyStats.EnemyStats=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2728,8 +2775,8 @@ Brush="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.Pos
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.PostProcessVolumeSettings.Settings.FilmShadowTint\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerRed\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerGreen\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerBlue\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
-Character="\"Object.Current Armour Helm Equipped\" \"Object.Current Armour Helm Equipped\" "
-Pawn="\"Object.Current Armour Helm Equipped\" \"Object.Current Armour Helm Equipped\" "
+Character=
+Pawn=
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Perception_C="\"Object.TargetEnemy\" \"Object.TargetEnemy\" "
@@ -2800,7 +2847,7 @@ Pause_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Obj
 Start_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CoolDownComponent_C=
 RangedAI_C="\"Object.\" \"Object.\" "
-BaseAI_C="\"Object.\" \"Object.\" "
+BaseAI_C=
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BaseArmour_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
@@ -2819,6 +2866,7 @@ Calc Utlity Stats="\"Struct.Temp Speed\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.PostProcessVolumeSettings.Settings.FilmShadowTint\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerRed\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerGreen\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerBlue\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 REINST_TopDownCharacter_C_236="\"Object.Character.Mesh.Object.Collision.BodyInstance\" "
+CorruptedSlave_C=
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -2844,7 +2892,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/t019847g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -3568,6 +3616,7 @@ LastLogListing=LoadErrors
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/EnemyAgent/CorruptedSlave.CorruptedSlave;
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
 RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
 RecentlyPlaced=/Game/c024816h/Elixir.Elixir;
@@ -3587,7 +3636,6 @@ RecentlyPlaced=/Game/AIAgent/BaseAI.BaseAI;
 RecentlyPlaced=/Game/Models/Shannon/body_WIP.body_WIP;
 RecentlyPlaced=/Game/GW000979/BasicTeleporter/Teleport.Teleport;
 RecentlyPlaced=/Game/GW000979/BasicTeleporter/TeleportOut.TeleportOut;
-RecentlyPlaced=/Game/SpawnActor/SpawnPoint.SpawnPoint;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -3638,26 +3686,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem1=/Game/GW000979/DataStruct/ArmourSlot
-MRUItem2=/Game/Mannequin/Character/Materials/TempCharacterInst
-MRUItem3=/Game/c024816h/TopDownCharacter3
-MRUItem4=/Game/c024816h/PickUpInterface
-MRUItem5=/Game/c024816h/BasePickUp
-MRUItem6=/Game/TopDownBP/Interfaces/PlayerInt
-MRUItem7=/Game/TopDownBP/Blueprints/PlayerControl
-MRUItem8=/Game/Levels/Demo
-MRUItem9=/Game/AIAgent/Baseprojectile
-MRUItem10=/Game/T019847G/DeathZone
-MRUItem11=/Game/TopDownBP/Interactexample/Door
-MRUItem12=/Game/GW000979/DataStruct/DataTables/TestItemTable
-MRUItem13=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
-MRUItem14=/Game/c024816h/Elixir
-MRUItem15=/Game/c024816h/VitalityPotion
-MRUItem16=/Game/c024816h/BottledRage
-MRUItem17=/Game/c024816h/LargeHealthPotion
-MRUItem18=/Game/GW000979/DataStruct/DataTables/WeaponDataHuman
-MRUItem19=/Game/GW000979/Weapons/WeaponDropHuman
+MRUItem0=/Game/EnemyAgent/EnemyStats
+MRUItem1=/Game/EnemyAgent/EnemyData
+MRUItem2=/Game/EnemyAgent/CorruptedSlave
+MRUItem3=/Game/AIAgent/BaseAI
+MRUItem4=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem5=/Game/GW000979/DataStruct/ArmourSlot
+MRUItem6=/Game/Mannequin/Character/Materials/TempCharacterInst
+MRUItem7=/Game/c024816h/TopDownCharacter3
+MRUItem8=/Game/c024816h/PickUpInterface
+MRUItem9=/Game/c024816h/BasePickUp
+MRUItem10=/Game/TopDownBP/Interfaces/PlayerInt
+MRUItem11=/Game/TopDownBP/Blueprints/PlayerControl
+MRUItem12=/Game/Levels/Demo
+MRUItem13=/Game/AIAgent/Baseprojectile
+MRUItem14=/Game/T019847G/DeathZone
+MRUItem15=/Game/TopDownBP/Interactexample/Door
+MRUItem16=/Game/GW000979/DataStruct/DataTables/TestItemTable
+MRUItem17=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
+MRUItem18=/Game/c024816h/Elixir
+MRUItem19=/Game/c024816h/VitalityPotion
 
 [WidgetTemplatesExpanded]
 Extra=False
