Main character - status effects

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -16,6 +16,7 @@ bSCSEditorShowFloor=False
 SCSViewportCameraSpeed=4
 AssetViewerProfileName=
 MaterialQualityLevel=1
+bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 GameGetsMouseControl=False
@@ -175,21 +176,21 @@ SphereComponent=SphereComponent.Collision.Collision,
 TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 AIbot_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
-K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 ObjectProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
-FloatProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+FloatProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 Perception_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
-StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
-BoolProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
+BoolProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 ArrayProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 IntProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
-K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 BaseWeapon_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 UserDefinedStruct=
 BoxComponent=BoxComponent.Collision.Collision,
 TargetDummy_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-NameProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+NameProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 SpawnPoint_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 AttackPlayer_C=
 Door_C=
@@ -224,11 +225,12 @@ K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.InputArgument0,
 Baseprojectile_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 WeaponDropHuman_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 BasePickUp_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
-Calc Utlity Stats=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+Calc Utlity Stats=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 CharacterMovementComponent=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
+BleedTimer=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -259,7 +261,10 @@ LastLevel=/Game/Levels/Demo
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/c024816h/BasePickUp.BasePickUp
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+OpenAssetsAtExit=/Game/CombatInterface/I_Combat.I_Combat
+OpenAssetsAtExit=/Game/CombatInterface/StatusEffects.StatusEffects
+OpenAssetsAtExit=/Game/Chloe/UI/HUD_Proto.HUD_Proto
 OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
 
 [DetailCategories]
@@ -2624,6 +2629,23 @@ TopDownCharacter_C.AssetUserData=True
 TopDownCharacter_C.Mobile=True
 TopDownCharacter_C.SkeletalMesh=True
 REINST_TopDownCharacter_C_153.Rendering=True
+DamageTestActor1_C.Tick=True
+DamageTestActor1_C.Default=True
+DamageTestActor1_C.Rendering=True
+DamageTestActor1_C.Replication=True
+DamageTestActor1_C.Input=True
+DamageTestActor1_C.Actor=True
+DamageText_C.Appearance=True
+DamageText_C.Designer=True
+DamageText_C.Input=True
+DamageText_C.Interaction=True
+DamageText_C.Performance=True
+DamageText_C.Layout=True
+DamageText_C.Behavior=True
+DamageText_C.Render Transform=True
+DamageText_C.Clipping=True
+DamageText_C.Navigation=True
+TopDownCharacter_C.BleedStatus=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -2711,6 +2733,8 @@ REINST_TopDownCharacter_C_153.Rendering=True
 /Game/c024816h/PickUpInterface.PickUpInterface=0
 /Game/c024816h/TopDownCharacter3.TopDownCharacter3=0
 /Game/Mannequin/Character/Materials/TempCharacterInst.TempCharacterInst=0
+/Game/Chloe/UI/Damage_text/DamageText.DamageText=0
+/Game/Chloe/UI/Damage_text/DamageTestActor1.DamageTestActor1=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2730,8 +2754,8 @@ Brush="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.Pos
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.PostProcessVolumeSettings.Settings.FilmShadowTint\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerRed\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerGreen\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerBlue\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
-Character=
-Pawn=
+Character="\"Object.\" \"Object.\" "
+Pawn="\"Object.\" \"Object.\" "
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Perception_C="\"Object.TargetEnemy\" \"Object.TargetEnemy\" "
@@ -2745,7 +2769,7 @@ NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
 Controller=
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-TopDownCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" "
+TopDownCharacter_C="\"Object.\" \"Object.\" "
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2778,8 +2802,8 @@ GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PlayerController=
@@ -2817,11 +2841,13 @@ Inventory_C=
 Baseprojectile_C=
 BasePickUp_C=
 BaseShield_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
-Calc Utlity Stats="\"Struct.TempVitality\" "
+Calc Utlity Stats=
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.PostProcessVolumeSettings.Settings.FilmShadowTint\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerRed\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerGreen\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerBlue\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 REINST_TopDownCharacter_C_236="\"Object.Character.Mesh.Object.Collision.BodyInstance\" "
 REINST_TopDownCharacter_C_153="\"Object.Character.Mesh.Object.Collision.BodyInstance\" "
+DamageText_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+BleedTimer=
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -3642,25 +3668,25 @@ PreserveScaleRatio=False
 
 [ContentBrowserRecent]
 MRUItem0=/Game/AIAgent/BaseAI
-MRUItem1=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem2=/Game/c024816h/BasePickUp
-MRUItem3=/Game/Levels/Demo
-MRUItem4=/Game/Mannequin/Character/Materials/TempCharacterInst
-MRUItem5=/Game/c024816h/TopDownCharacter3
-MRUItem6=/Game/c024816h/PickUpInterface
-MRUItem7=/Game/TopDownBP/Interfaces/PlayerInt
-MRUItem8=/Game/TopDownBP/Blueprints/PlayerControl
-MRUItem9=/Game/AIAgent/Baseprojectile
-MRUItem10=/Game/T019847G/DeathZone
-MRUItem11=/Game/TopDownBP/Interactexample/Door
-MRUItem12=/Game/GW000979/DataStruct/DataTables/TestItemTable
-MRUItem13=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
-MRUItem14=/Game/c024816h/Elixir
-MRUItem15=/Game/c024816h/VitalityPotion
-MRUItem16=/Game/c024816h/BottledRage
-MRUItem17=/Game/c024816h/LargeHealthPotion
-MRUItem18=/Game/GW000979/DataStruct/DataTables/WeaponDataHuman
-MRUItem19=/Game/GW000979/Weapons/WeaponDropHuman
+MRUItem1=/Game/Chloe/UI/HUD_Proto
+MRUItem2=/Game/CombatInterface/StatusEffects
+MRUItem3=/Game/CombatInterface/I_Combat
+MRUItem4=/Game/Chloe/UI/Damage_text/DamageText
+MRUItem5=/Game/Chloe/UI/Damage_text/DamageTestActor1
+MRUItem6=/Game/Levels/Demo
+MRUItem7=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem8=/Game/c024816h/BasePickUp
+MRUItem9=/Game/Mannequin/Character/Materials/TempCharacterInst
+MRUItem10=/Game/c024816h/TopDownCharacter3
+MRUItem11=/Game/c024816h/PickUpInterface
+MRUItem12=/Game/TopDownBP/Interfaces/PlayerInt
+MRUItem13=/Game/TopDownBP/Blueprints/PlayerControl
+MRUItem14=/Game/AIAgent/Baseprojectile
+MRUItem15=/Game/T019847G/DeathZone
+MRUItem16=/Game/TopDownBP/Interactexample/Door
+MRUItem17=/Game/GW000979/DataStruct/DataTables/TestItemTable
+MRUItem18=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
+MRUItem19=/Game/c024816h/Elixir
 
 [WidgetTemplatesExpanded]
 Extra=False
